# Langgraph-deepresearch

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/notes/: 18394de6.md  1c4cfa68.md  602dab4c.md  79b2117e.md  b2576d7e.md  ba712385.md
backend/src/: agent.py  config.py  main.py  models.py  prompts.py  utils.py
backend/src/deepresearch_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/services/: __init__.py  note_tool.py  planner.py  reporter.py  search.py  search_tool.py  summarizer.py  text_processing.py
backend/src/services/myagent/: __init__.py
backend/src/services/myagent/agents/: __init__.py  simple_agent.py  tool_aware_agent.py
backend/src/services/myagent/core/: base_agent.py  config.py  exceptions.py  llm.py  message.py
backend/src/services/myagent/tools/: __init__.py  base.py  registry.py
frontend/: package-lock.json
